--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All The Guests</h1>
-
+<%= button_to "Log an Appearance", new_appearance_path, method: 'get'%>
 <ul>
   <% @guests.each do |guest| %>
-    <li><%= guest.name %></li>
+    <li><%= link_to guest.name, guest %></li>
   <% end %>
 </ul>
